# ROSAHRSClient

./: CMakeLists.txt  README.md  package.xml
msg/: Data.msg
src/: functions.cpp  functions.h  klient_ahrs.cpp
src/Client_ahrs/: CMakeLists.txt  RPCCallerAHRS.cpp  RPCCallerAHRS.h
src/Common_ahrs/: CMakeLists.txt  Frames.cpp  Frames.h  RPCInterface.h
src/Config/: config.cpp  config.h
